# sensible-fitting

./: .gitignore  LICENSE  README.md  changes.patch  dump_code.py  exampleBinomial.py  improvements.txt  pyproject.toml  repo_dump.txt  spec.py
examples/: 01_line.py  02_batch_common_x.py  03_batch_ragged_x.py  04_backend_swap.py  05_derived_params.py  06_fit_on_off.py  07_results_indexing.py  08_hierarchical_indexing.py  09_new_feat_example.py  09_seed_demo.py  09_uncertainty_correlations.py  10_binomial.py  10_gaussian_2d.py  10_uncertainty_correlations.py  11_binomial.py  11_ultranest.py  12_gaussian_2d.py  12_plot_helpers.py  13_rabi_oscillation.py  14_plot_helpers.py  14_rabi_band_compare.py  15_rabi_oscillation.py  15_ramsey_multimodal.py  16_rabi_band_compare.py  16_sequential_design.py  17_ramsey_multimodal.py  17_sequential_gaussian.py  18_sequential_design.py  19_sequential_gaussian.py  20_plot_panels.py  README.md  test_ultranest.py  ultranest_sanity.py
spec/: example1.py  example2.py  example3.py  example4.py  exampleBinomial.py  spec.py
src/sensible_fitting/: __init__.py  data.py  inference.py  inputs.py  model.py  models.py  params.py  plotting.py  run.py  util.py  viz.py
src/sensible_fitting/backends/: __init__.py  common.py  scipy_curve_fit.py  scipy_differential_evolution.py  scipy_minimize.py  ultranest_backend.py
src/sensible_fitting/models/: __init__.py  gaussian.py  line.py  rabi.py  sinusoid.py
tests/: test_data_inference.py  test_differential_evolution_backend.py  test_examples.py  test_paramview_fit_and_stderr.py  test_plot_metadata.py  test_run_results.py  test_suggest_next_x.py  test_uncertainty_correlations.py  test_uncertainty_format.py
ultranest_sanity_run/run1/chains/: equal_weighted_post.txt  run.txt  weighted_post.txt  weighted_post_untransformed.txt
ultranest_sanity_run/run1/info/: post_summary.csv  results.json
ultranest_sanity_run/run1/results/: points.hdf5
ultranest_sanity_run/run2/chains/: equal_weighted_post.txt  run.txt  weighted_post.txt  weighted_post_untransformed.txt
ultranest_sanity_run/run2/info/: post_summary.csv  results.json
(+50 files in other folders)
