[project]
name = "sensible-fitting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tomhepz", email = "9285131+tomhepz@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "lmfit>=1.3.4",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "ultranest>=4.4.0",
    "uncertainties>=3.2.3",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pyqt6>=6.10.1",
]
