[project]
name = "sensible-fitting"
version = "0.1.0"
description = "Small, opinionated fitting framework for AMO-style workflows"
readme = "README.md"
authors = [
    { name = "tomhepz", email = "9285131+tomhepz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.7",
]
uncertainties = [
    "uncertainties>=3.2.3",
]
bayes = [
    "ultranest>=4.4.0",
    "h5py>=3.15.1",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pytest>=8.2.0",
    "pyqt6>=6.10.1",
    "uncertainties>=3.2.3",
    "ultranest>=4.4.0",
    "h5py>=3.15.1",
]

[tool.pytest.ini_options]
markers = [
    "examples: run example scripts",
]
